final keyword
public class Final {
	public static void main(String[] args) { 

   final double pi = 3.14;

   System.out.println(pi);

   double pi = 3;
   
      
		
	}
}

Output:

Final.java:8: error: variable pi is already defined in method main(String[])
   double pi = 3;
          ^
1 error
